# rust-api-server

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yaml
ci/: install-proto.sh
cli/src/: main.rs
deploy/docker/: docker-compose.yaml
deploy/local/: convenient_script.sh
src/adapter/: Cargo.toml
src/adapter/src/repositories/postgres/: question_db.rs
src/adapter/src/repositories/postgres/models/: question.rs
src/core/: Cargo.toml
src/core/src/common/: errors.rs
src/core/src/entities/: pagination_entity.rs  question_filter.rs
src/core/src/ports/: question.rs
src/gpt_answer_server/: Cargo.toml
src/grpc/: Cargo.toml  build.rs
src/grpc/src/grpc_client/: gpt_answer.rs
src/grpc/src/grpc_server/: gpt_answer.rs
src/public/: Cargo.toml
src/public/src/: errors.rs  main.rs  router.rs
src/public/src/bootstrap/: router.rs
src/public/src/controllers/: question.rs
